--- a/src/frontend/styles/components/terminal.styl
+++ b/src/frontend/styles/components/terminal.styl
@@ -31,8 +31,8 @@
     height: 100% // it seems to help with scroll on overflow
 
 .terminal-output, .terminal-input
-  background-color: black
-  color: white
+  background-color: transparent
+  color: #ABABAB
   word-wrap: break-all
   white-space: pre-line
   cursor: pointer
